--- a/mySite/wwwroot/css/styles.css
+++ b/mySite/wwwroot/css/styles.css
@@ -69,6 +69,7 @@
 
 #catalog {
     background: url('/images/books.jpg') bottom right 15% no-repeat #555;
+    background-image: url('../images/books.jpg');
 }
 
 #catalogIndexTable {
@@ -84,7 +85,7 @@
     }
 
 #patrons {
-    background: url('/images/patron.jpeg') bottom left 15% no-repeat #555;
+    background-image: url('../images/patron.jpg');
 }
 
 .branchInfo {
@@ -92,7 +93,7 @@
 }
 
 #branches {
-    background: url('/images/bldg.jpeg') bottom right 15% no-repeat #555;
+    background-image: url('../images/bldg.jpg');
 }
 
 #assets {
